--- a/templates/accounts/company_images.html
+++ b/templates/accounts/company_images.html
@@ -1,26 +1,40 @@
-{% extends 'base.html' %} {% load static %} {% block title %} All jobs {% endblock %} {% block styles %}
+{% extends 'base.html' %} {% load static %} {% block title %} Company Images {% endblock %} {% block styles %}
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <style>
-    .gallery {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(4, 5vw);
-        grid-gap: 15px;
+    .image {
+        border: 3px solid rgb(8, 51, 116);
+        border-radius: 5px;
+        padding: 5px;
+        background-color: azure;
     }
     
-    .gallery__img {
+    .image>img {
+        height: 250px;
         width: 100%;
-        height: 100%;
-        object-fit: cover;
     }
 </style>
 {% endblock %}
 <!-- Content Block -->
-{% block content %} {% for image in images %}
-<div class=”gallery”>
-    <figure class=”gallery__item gallery__item--1 ">
-      <img src="{{ image.company_image.url }} " class="gallery__img " alt="Image 1 ">
-    </figure>
-  </div>
-{% endfor %}
+{% block content %}
+<section class="bg-light-gray">
+    <div class="container">
+        <h3 class="heading">Company Images</h3>
+        <div class="row featured align-items-stretch">
+            {% for image in images %}
+            <div class="col-lg-4 mb-5 mb-lg-0">
+                <div class="box-image-text bg-visible full-height">
+                    <div class="top">
+                        <a href="#">
+                            <div class="image">
+                                <img src="{{ image.company_image.url }}" alt="company image" class="img-fluid">
+                            </div>
+
+                        </a>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+</section>
 {% endblock %}
