--- a/templates/resume/resume.html
+++ b/templates/resume/resume.html
@@ -5,7 +5,7 @@
 
 <head>
 
-    <title>{{resume.name}} | Web Designer, Director | name@yourdomain.com</title>
+    <title>{{user.first_name}} {{user.last_name}}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <meta name="keywords" content="" />
@@ -22,10 +22,9 @@
             font-weight: bolder;
             font-size: 16px;
         }
-        
-        .yui-u tr>td {
+        /* .yui-u tr>td {
             padding: 0 1.5rem;
-        }
+        } */
     </style>
 
 </head>
@@ -34,19 +33,20 @@
 
     <div id="doc2" class="yui-t7">
         <div id="inner">
-
             <div id="hd">
                 <div class="yui-gc">
                     <div class="yui-u first">
-                        <h1 style="color: rgb(26, 29, 29); font-size: 26px; font-family: 'Times New Roman', Times, serif;">{{resume.name}}</h1>
-                        <h2>Web Designer, Director</h2>
+                        <h1 style="color: rgb(26, 29, 29); font-size: 26px; font-family: 'Times New Roman', Times, serif;">{{user.first_name}} {{user.last_name}}</h1>
+                        <h3><a href="#">Email: {{user.email}}</a></h3>
+                        <h3></h3>
+                        <p>{{user.userprofile.address}}</p>
                     </div>
 
                     <div class="yui-u">
                         <div class="contact-info">
-                            <h3><a id="pdf" href="{% url 'accounts:resumedownload' %}">Download PDF</a></h3>
-                            <h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
-                            <h3>(313) - 867-5309</h3>
+                            <img src="{{user.userprofile.image.url}}" alt="">
+                            <h3><a id="pdf" href="{% url 'accounts:resumedownload' user.id %}">Download PDF</a></h3>
+
                         </div>
                         <!--// .contact-info -->
                     </div>
@@ -65,7 +65,7 @@
                             </div>
                             <div class="yui-u">
                                 <p class="enlarge">
-                                    {{resume.description}}
+                                    {{user.userprofile.about}}
                                 </p>
                             </div>
                         </div>
@@ -73,23 +73,40 @@
 
                         <div class="yui-gf">
                             <div class="yui-u first">
-                                <h2>Skills</h2>
+                                <h2>Education</h2>
                             </div>
 
                             <div class="yui-u">
-                                <table>
-
+                                {% for degree in degrees %}
+                                <div class="job">
+                                    <td>
+                                        <h2>{{degree.degree}}</h2>
+                                        <h3>{{degree.institute_name}}</h3>
+                                        <h4>Score:{{degree.cgpa}}</h4>
+                                        <br>
+                                        <h3>Passing Year:{{degree.passing_year|date}}</h3>
+                                    </td>
+                                    <!-- <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence.
+                                    </p> -->
+                                </div>
+                                {% endfor %}
+                                <!-- <table>
                                     <tr>
-                                        <th>Front End</th>
-                                        <th>Back End</th>
-                                        <th>OS</th>
+                                        <th>Education</th>
+                                        <th>Experience</th>
+                                        <th>Skills</th>
                                     </tr>
                                     <tr>
-                                        <td>HTML5, CSS3,JAVASCRIPT</td>
+                                        <td>{% for degree in degrees %}
+                                            <h4>DEGREE: <span class="contact">{{degree.degree}}</span></h4>
+                                            <h5>SUBJECT: <span class="contact">{{degree.subject}}</span></h5>
+                                            <h5>INSTITUTE: <span class="contact">{{degree.institute_name}}</span></h5>
+                                            {% endfor %}
+                                        </td>
                                         <td>Python,Django, DRF</td>
                                         <td>Windows, Linux</td>
                                     </tr>
-                                </table>
+                                </table> -->
                                 <!-- <div class="talent">
                                     <h2>Web Design</h2>
                                     <p>Assertively exploit wireless initiatives rather than synergistic core competencies. </p>
@@ -155,14 +172,15 @@
                             <!--// .yui-u -->
 
                             <div class="yui-u">
-
+                                {% for exp in experiences %}
                                 <div class="job">
-                                    <h2>Facebook</h2>
-                                    <h3>Senior Interface Designer</h3>
-                                    <h4>2005-2007</h4>
-                                    <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence.
-                                    </p>
+                                    <h2>{{exp.company_name}}</h2>
+                                    <h3>{{exp.position}}</h3>
+                                    <h4>{{exp.from_date}}-{{exp.to_date}}</h4>
+                                    <!-- <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence.
+                                    </p> -->
                                 </div>
+                                {% endfor %}
 
                             </div>
                             <!--// .yui-u -->
