--- a/templates/resume/jsresume.html
+++ b/templates/resume/jsresume.html
@@ -5,7 +5,7 @@
 
 <head>
 
-    <title>{{resume.name}} | Web Designer, Director | name@yourdomain.com</title>
+    <title>{{user.first_name}} {{user.last_name}}</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
     <meta name="keywords" content="" />
@@ -22,9 +22,38 @@
             font-weight: bolder;
             font-size: 16px;
         }
-        
-        .yui-u tr>td {
+        /* .yui-u tr>td {
             padding: 0 1.5rem;
+        } */
+        
+        table,
+        th,
+        td {
+            /* border: 1px solid rgb(158, 216, 255); */
+            padding: 5px;
+        }
+        
+        th {
+            text-transform: uppercase;
+            border: none;
+        }
+        
+        img {
+            height: 150px;
+            width: 150px;
+            border: 3px solid rgb(21, 56, 56);
+            border-radius: 50%;
+            float: right;
+        }
+        
+        table {
+            width: 100%;
+        }
+        
+        th>h2 {
+            text-transform: uppercase;
+            font-style: italic;
+            font-weight: bolder;
         }
     </style>
 
@@ -34,81 +63,96 @@
 
     <div id="doc2" class="yui-t7">
         <div id="inner">
-
-            <div id="hd">
+            <table id='hd'>
+                <td>
+                    <h1 style="color: rgb(26, 29, 29); font-size: 26px; font-family: 'Times New Roman', Times, serif;">{{user.first_name}} {{user.last_name}}</h1>
+                    <h3><i class='fa fa-envelop'></i><a href="#">Email: {{user.email}}</a></h3>
+                    <p>{{user.userprofile.address}}</p>
+                </td>
+                <td>
+                    <img src="{{user.userprofile.image.path}}" alt="">
+                    <h3><a id="pdf" href="{% url 'accounts:resumedownload' user.id %}">Download PDF</a></h3>
+                </td>
+            </table>
+            <!-- <div id="hd">
                 <div class="yui-gc">
                     <div class="yui-u first">
-                        <h1 style="color: rgb(26, 29, 29); font-size: 26px; font-family: 'Times New Roman', Times, serif;">{{resume.name}}</h1>
-                        <h2>Web Designer, Director</h2>
+                        <h1 style="color: rgb(26, 29, 29); font-size: 26px; font-family: 'Times New Roman', Times, serif;">{{user.first_name}} {{user.last_name}}</h1>
+                        <h3><a href="#">Email: {{user.email}}</a></h3>
+                        <h3></h3>
+                        <p>{{user.userprofile.address}}</p>
                     </div>
 
                     <div class="yui-u">
                         <div class="contact-info">
-                            <!-- <h3><a id="pdf" href="{% url 'accounts:resumedownload' %}">Download PDF</a></h3> -->
-                            <h3><a href="mailto:name@yourdomain.com">name@yourdomain.com</a></h3>
-                            <h3>(313) - 867-5309</h3>
+                            <img src="{{user.userprofile.image.url}}" alt="">
+                            <h3><a id="pdf" href="{% url 'accounts:resumedownload' user.id %}">Download PDF</a></h3>
+
                         </div>
-                        <!--// .contact-info -->
                     </div>
                 </div>
-                <!--// .yui-gc -->
-            </div>
+            </div> -->
             <!--// hd -->
 
             <div id="bd">
                 <div id="yui-main">
                     <div class="yui-b">
-
                         <div class="yui-gf">
                             <div class="yui-u first">
-                                <h2>Profile</h2>
+                                <h2>Career Objective</h2>
                             </div>
                             <div class="yui-u">
                                 <p class="enlarge">
-                                    {{resume.description}}
+                                    {{user.userprofile.about}}
                                 </p>
                             </div>
+                        </div>
+                        <div class="yui-gf">
+                            <table>
+                                <tr>
+                                    <th>
+                                        <h2>Education</h2>
+                                    </th>
+                                </tr>
+                                <tr>
+                                    {% for degree in degrees %}
+                                    <div class="job">
+                                        <td>
+                                            <h2>{{degree.degree}}</h2>
+                                            <h3>{{degree.institute_name}}</h3>
+                                            <h4>Score: {{degree.cgpa}}</h4>
+                                            <h4>Passing Year: {{degree.passing_year|date}}</h4>
+                                        </td>
+                                        <!-- <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence.
+                                    </p> -->
+                                    </div>
+                                    {% endfor %}
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="yui-gf">
+                            <!-- <div class="yui-u first">
+                                <h2>Education</h2>
+                            </div>
+
+                            <div class="yui-u">
+                                {% for degree in degrees %}
+                                <div class="job">
+                                    <td>
+                                        <h2>{{degree.degree}}</h2>
+                                        <h3>{{degree.institute_name}}</h3>
+                                        <h4>Score:{{degree.cgpa}}</h4>
+                                        <br>
+                                        <h3>Passing Year:{{degree.passing_year|date}}</h3>
+                                    </td>
+           
+                                </div>
+                                {% endfor %}
+                            </div> -->
                         </div>
                         <!--// .yui-gf -->
 
                         <div class="yui-gf">
-                            <div class="yui-u first">
-                                <h2>Skills</h2>
-                            </div>
-
-                            <div class="yui-u">
-                                <table>
-
-                                    <tr>
-                                        <th>Front End</th>
-                                        <th>Back End</th>
-                                        <th>OS</th>
-                                    </tr>
-                                    <tr>
-                                        <td>HTML5, CSS3,JAVASCRIPT</td>
-                                        <td>Python,Django, DRF</td>
-                                        <td>Windows, Linux</td>
-                                    </tr>
-                                </table>
-                                <!-- <div class="talent">
-                                    <h2>Web Design</h2>
-                                    <p>Assertively exploit wireless initiatives rather than synergistic core competencies. </p>
-                                </div>
-
-                                <div class="talent">
-                                    <h2>Interface Design</h2>
-                                    <p>Credibly streamline mission-critical value with multifunctional functionalities. </p>
-                                </div>
-
-                                <div class="talent">
-                                    <h2>Project Direction</h2>
-                                    <p>Proven ability to lead and manage a wide variety of design and development projects in team and independent situations.</p>
-                                </div> -->
-                            </div>
-                        </div>
-                        <!--// .yui-gf -->
-
-                        <!-- <div class="yui-gf">
                             <div class="yui-u first">
                                 <h2>Technical</h2>
                             </div>
@@ -144,7 +188,7 @@
                                     <li class="last">Linux</li>
                                 </ul>
                             </div>
-                        </div> -->
+                        </div>
                         <!--// .yui-gf-->
 
                         <div class="yui-gf">
@@ -155,14 +199,15 @@
                             <!--// .yui-u -->
 
                             <div class="yui-u">
-
+                                {% for exp in experiences %}
                                 <div class="job">
-                                    <h2>Facebook</h2>
-                                    <h3>Senior Interface Designer</h3>
-                                    <h4>2005-2007</h4>
-                                    <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence.
-                                    </p>
+                                    <h2>{{exp.company_name}}</h2>
+                                    <h3>{{exp.position}}</h3>
+                                    <h4>{{exp.from_date}}-{{exp.to_date}}</h4>
+                                    <!-- <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence.
+                                    </p> -->
                                 </div>
+                                {% endfor %}
 
                             </div>
                             <!--// .yui-u -->
@@ -203,12 +248,5 @@
 
 
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"></script>
-<script>
-    var doc = new jsPDF()
-    var data = document.querySelector('#doc2')
-    doc.fromHTML(data, 15, 20)
-    doc.save("jsresume.pdf")
-</script>
 
 </html>
