--- a/templates/resume/jsresume.html
+++ b/templates/resume/jsresume.html
@@ -43,7 +43,7 @@
             width: 150px;
             border: 3px solid rgb(21, 56, 56);
             border-radius: 50%;
-            float: right;
+            /* margin-left: 450px; */
         }
         
         table {
@@ -65,14 +65,15 @@
         <div id="inner">
             <table id='hd'>
                 <td>
+                    <img src="{{user.userprofile.image.path}}" alt="">
+                    <h3><a id="pdf" href="{% url 'accounts:resumedownload' user.id %}">Download PDF</a></h3>
+                </td>
+                <td>
                     <h1 style="color: rgb(26, 29, 29); font-size: 26px; font-family: 'Times New Roman', Times, serif;">{{user.first_name}} {{user.last_name}}</h1>
                     <h3><i class='fa fa-envelop'></i><a href="#">Email: {{user.email}}</a></h3>
                     <p>{{user.userprofile.address}}</p>
                 </td>
-                <td>
-                    <img src="{{user.userprofile.image.path}}" alt="">
-                    <h3><a id="pdf" href="{% url 'accounts:resumedownload' user.id %}">Download PDF</a></h3>
-                </td>
+
             </table>
             <!-- <div id="hd">
                 <div class="yui-gc">
@@ -153,45 +154,28 @@
                         <!--// .yui-gf -->
 
                         <div class="yui-gf">
-                            <div class="yui-u first">
-                                <h2>Technical</h2>
-                            </div>
-                            <div class="yui-u">
-                                <table>
-                                    <tr>
-                                        <th>XHTML</th>
-                                        <th>CSS</th>
-                                        <th>Javascript</th>
-                                    </tr>
-                                    <tr>
-                                        <td>Jquery</td>
-                                        <td>PHP</td>
-                                        <td>Linux</td>
-                                    </tr>
-                                </table>
-
-                                <ul class="talent">
-                                    <li>XHTML</li>
-                                    <li>CSS</li>
-                                    <li class="last">Javascript</li>
-                                </ul>
-
-                                <ul class="talent">
-                                    <li>Jquery</li>
-                                    <li>PHP</li>
-                                    <li class="last">CVS / Subversion</li>
-                                </ul>
-
-                                <ul class="talent">
-                                    <li>OS X</li>
-                                    <li>Windows XP/Vista</li>
-                                    <li class="last">Linux</li>
-                                </ul>
-                            </div>
+                            <table>
+                                <tr>
+                                    <th>
+                                        <h2>Experience</h2>
+                                    </th>
+                                </tr>
+                                <tr>
+                                    {% for exp in experiences %}
+                                    <div class="job">
+                                        <td>
+                                            <h2>{{exp.company_name}}</h2>
+                                            <h3>{{exp.position}}</h3>
+                                            <h4>{{exp.from_date}} - {{exp.to_date}}</h4>
+                                        </td>
+                                    </div>
+                                    {% endfor %}
+                                </tr>
+                            </table>
                         </div>
                         <!--// .yui-gf-->
 
-                        <div class="yui-gf">
+                        <div>
 
                             <div class="yui-u first">
                                 <h2>Experience</h2>
@@ -203,9 +187,7 @@
                                 <div class="job">
                                     <h2>{{exp.company_name}}</h2>
                                     <h3>{{exp.position}}</h3>
-                                    <h4>{{exp.from_date}}-{{exp.to_date}}</h4>
-                                    <!-- <p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence.
-                                    </p> -->
+                                    <h4>{{exp.from_date}} - {{exp.to_date}}</h4>
                                 </div>
                                 {% endfor %}
 
